test/data/syntax-errors/missing-loop.gs
whiles( thief ) 
  givesUs "d"
GollumGollum